[package]
name = "async-snmp"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Modern async-first SNMP client library for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/async-snmp/async-snmp"
keywords = ["snmp", "network", "async", "monitoring"]
categories = ["network-programming", "asynchronous"]

[dependencies]
bytes = "1.11.0"
futures-core = "0.3.31"
smallvec = "1.15.1"
socket2 = { version = "0.5", features = ["all"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["net", "time", "sync", "rt", "rt-multi-thread", "macros", "io-util"] }
tracing = "0.1.44"

# CLI dependencies (optional)
clap = { version = "4", features = ["derive"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# V3 crypto dependencies
aes = "0.8.4"
subtle = "2.6"
zeroize = { version = "1.8", features = ["derive"] }
cbc = "0.1.2"
cfb-mode = "0.8.2"
des = "0.8.1"
digest = "0.10.7"
hmac = "0.12.1"
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.9"

[dev-dependencies]
testcontainers = "0.26"
proptest = "1.9"
dirs = "6.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Enable testing features for integration tests
async-snmp = { path = ".", features = ["testing"] }

[features]
default = []
testing = []  # Expose MockTransport for downstream testing
cli = ["dep:clap", "dep:serde", "dep:serde_json", "dep:tracing-subscriber"]  # CLI utilities
tls = []      # Future: SNMP over TLS (RFC 6353)
dtls = []     # Future: SNMP over DTLS (RFC 6353)

[[bin]]
name = "asnmp-get"
path = "src/bin/asnmp_get.rs"
required-features = ["cli"]

[[bin]]
name = "asnmp-walk"
path = "src/bin/asnmp_walk.rs"
required-features = ["cli"]

[[bin]]
name = "asnmp-set"
path = "src/bin/asnmp_set.rs"
required-features = ["cli"]
